--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <div class="container">
     <div id="b325" class="asteroid">The King</div>
     <div class="asteroid b326">The Conceited Man</div>
